adding meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl_pl">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Portfolio Project</title>
+    <title>Robert Gontarski - web deweloper</title>
+    <meta name="description" content="Jeśli masz projekt, który chcesz rozpocząć, myślisz, że potrzebujesz mojej pomocy lub po prostu chcesz powiedzieć hej, to skontaktuj się ze mną.">
+    <meta name="robots" content="noimageindex, nofollow, nosnippet">
   </head>
   <body>
     <div id="root"></div>
