added ico and link in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Robert Gontarski - web deweloper</title>
     <meta name="description" content="Jeśli masz projekt, który chcesz rozpocząć, myślisz, że potrzebujesz mojej pomocy lub po prostu chcesz powiedzieć hej, to skontaktuj się ze mną.">
     <meta name="robots" content="noimageindex, nofollow, nosnippet">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/avatar.ico">
   </head>
   <body>
     <div id="root"></div>
